Add more examples to the fetchgraph test